force-app/main/default/objects/Autopay_Schedule__c/Autopay_Schedule__c.object-meta.xml
<CustomObject>
    <description>Used to schedule a preview or non-preview CS Cancellation</description>
    <label>CS Cancellation Schedule</label>
    <nameField>
        <displayFormat>CSCS-{0000}</displayFormat>
        <label>CS Cancellation Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Cancellation Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>