force-app/main/default/objects/Autopay_Schedule__c/fields/Preview__c.field-meta.xml
<CustomField>
    <fullName>Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Run a preview of the cancellation only</inlineHelpText>
    <label>Preview</label>
    <type>Checkbox</type>
</CustomField>