force-app/main/default/objects/Autopay_Schedule__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <inlineHelpText>Date on which the CSCancellationScheduler should run on Accounts and Opportunities</inlineHelpText>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>