force-app/main/default/objects/Autopay_Schedule__c/fields/Send_Results_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Results_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Results of the cancellation run will be sent to this user.</inlineHelpText>
    <label>Send Results To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CS_Cancellation_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>