force-app/main/default/objects/Autopay_Schedule__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <inlineHelpText>Populated by code after the CSCancellationScheduler runs on a schedule (but not when run ad-hoc).</inlineHelpText>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>