force-app/main/default/objects/Autopay_Schedule__c/fields/Time_Finished__c.field-meta.xml
<CustomField>
    <fullName>Time_Finished__c</fullName>
    <label>Time Finished</label>
    <type>DateTime</type>
</CustomField>