force-app/main/default/objects/Autopay_Schedule__c/fields/Time_Started__c.field-meta.xml
<CustomField>
    <fullName>Time_Started__c</fullName>
    <label>Time Started</label>
    <type>DateTime</type>
</CustomField>