force-app/main/default/objects/Autopay_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Run_Date__c</columns>
    <columns>Time_Started__c</columns>
    <columns>Time_Finished__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>